# django-study

./: pyproject.toml
1일차/: db.sqlite3  pyproject.toml
1일차/DjangoProject/: settings.py  urls.py
1일차/bookmark/: apps.py  views.py
1일차/templates/: book_detail.html  book_list.html  bookmark_list.html  gugu.html  movie.html
2일차/bookmark/: admin.py  apps.py  models.py
2일차/bookmark/migrations/: 0001_initial.py
blog/: db.sqlite3  pyproject.toml
blog/blog/: settings.py  urls.py
blog/blogapp/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
blog/blogapp/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_alter_blog_category.py  0004_comment.py  0005_alter_comment_options.py  0006_alter_comment_options.py  0007_blog_image.py  0008_blog_thumbnail.py
blog/member/: views.py
blog/templates/: about.html  base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  form-js.html  pagination.html  test_get.html  test_post.html
blog/templates/registration/: login.html  sign_up.html
blog/utils/: models.py
todo/: db.sqlite3
todo/login/: views.py
todo/todo/: settings.py  urls.py
todo/todo/templates/: base.html  pagination.html  todo_create.html  todo_detail.html  todo_info.html  todo_list.html  todo_update.html
todo/totododo/: admin.py  apps.py  cb_views.py  forms.py  models.py  urls.py  views.py
todo/totododo/migrations/: 0001_initial.py  0002_alter_todo_id.py  0003_todo_user_alter_todo_id.py  0004_comment.py  0005_todo_image_todo_thumbnail.py  (+1 more)
(+2 files in other folders)
